--- a/src/components/ulApi/ulApi.css
+++ b/src/components/ulApi/ulApi.css
@@ -1,3 +1,8 @@
+*{
+  font-family: Klavika,arial,sans-serif;
+  
+}
+
 .article__ul {
   display: flex;
   justify-content: center;
@@ -7,6 +12,8 @@
   row-gap: 30px;
   margin: 20px 0;
 }
+
+
 
 .article__img{
   width: 100px;
@@ -26,6 +33,8 @@
   width: 230px;
   height: 380px;
   transition: box-shadow 0.33s, transform 0.33s;
+  background-color: white;
+  border-radius: 12%;
 }
 
 .ul__img {
@@ -34,6 +43,7 @@
 }
 
 .ul__div {
+  --background-card: #caced5;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -42,10 +52,12 @@
   background-color: var(--background-card);
   width: 100%;
   height: 35%;
+  border-radius: 15%;
+  color:white;
 }
 
 .ul__h2 {
-  font-weight: var(--font-weight-medium);
+  font-weight: 600;
   font-size: 1rem;
   width: 80%;
   position: relative;
@@ -75,10 +87,23 @@
 
 .ul__li:hover {
   cursor: pointer;
-  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 5px 10px #EB4A5A;
   transform: translateY(-10px);
+  /*border-radius: 15%;*/
 }
 
 .ul__li:hover .ul__img {
   transform: translatex(5px);
+}
+
+.article__select{
+  border-radius: 4%;
+  background-color: white;
+  width: 200px;
+  height: 4vh;
+  border: 1px solid rgba(151, 152, 151, 0.3);
+}
+
+.body{
+  background-color:#e8e9ea;
 }
