--- a/src/components/detail/detail.css
+++ b/src/components/detail/detail.css
@@ -7,34 +7,77 @@
   padding: 0 5%;
 }
 
-.body{
-  background-image:url('https://media.istockphoto.com/id/1294603953/es/vector/parte-diagonal-de-las-rayas-negras-abstractas.jpg?s=1024x1024&w=is&k=20&c=L6JL2el1OQ-DtzcbP0EfNG8OFh5JQ6A0NIcsHqSt3CY=');
+.body {
+  background-image: url('https://media.istockphoto.com/id/1294603953/es/vector/parte-diagonal-de-las-rayas-negras-abstractas.jpg?s=1024x1024&w=is&k=20&c=L6JL2el1OQ-DtzcbP0EfNG8OFh5JQ6A0NIcsHqSt3CY=');
   background-repeat: no-repeat;
   background-size: cover;
-  
+
+
+
 }
 
-#footer{
+
+
+.flotante {
+  position: fixed;
+  /* Opcionalmente, puedes usar "absolute" en lugar de "fixed" */
+  top: 100px;
+  /* Distancia desde la parte superior */
+  left: 400px;
+  /* Distancia desde la izquierda */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  /* Color de fondo */
+  padding: 10px;
+  border: 1px solid #000;
+  /* Borde */
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+  /* Sombra */
+  z-index: 200;
+  height: 700px;
+
+}
+
+#titulo_flotante {
+  color: #000;
+}
+
+.ul__img__flotante,
+.ul__li_flotante {
+  width: 400px !important;
+  height: 200px !important;
+}
+
+.ul__li_flotante {
+  display: flex;
+  flex-direction: row !important;
+  justify-content: start;
+}
+
+
+
+#footer {
   display: flex;
   flex-direction: column;
   text-align: center;
   justify-content: center;
-  
+
 }
 
-#footer__titulo,
 #footer__titulo{
-  color:black;
+  color: black;
   display: flex;
   justify-content: center;
   align-items: center;
   font-weight: 400;
-    font-size: 1rem;
-    width: 80%;
-    position: relative;
+  font-size: 1rem;
+  width: 80%;
+  position: relative;
 }
 
-#email{
+#email {
   height: 5vh;
   background-color: #e4e5e7;
   margin: 0;
@@ -42,12 +85,12 @@
   border: 0;
 }
 
-#botton{
+#botton {
   height: 5vh;
   width: 150px;
   background-color: #274672;
   margin: 0;
-  color:azure
+  color: azure
 }
 
 
@@ -71,30 +114,30 @@
   font-size: 2rem;
   font-weight: var(--font-weight-bold);
   margin: 0;
-  color:aliceblue;
+  color: aliceblue;
 }
 
 .ul__h2--div {
   font-size: 2rem;
   font-weight: var(--font-weight-bold);
   margin: 1em 0 0 0;
-  color:aliceblue;
+  color: aliceblue;
 }
 
 .ul__p--div {
   font-size: 1rem;
   font-weight: var(--font-weight-bold);
   margin: 3em 0 0 0;
-  color:aliceblue;
+  color: aliceblue;
 }
 
 .ul__img--div {
   width: 150px;
   margin: 1em 0 2em 0;
-  transition: transform 0.33s ;
+  transition: transform 0.33s;
   border-radius: 12%;
-  
-  
+
+
 }
 
 .ul__img--div:hover {
@@ -122,7 +165,7 @@
   font-weight: var(--font-weight-bold);
   margin: 0;
   padding: 0;
-  color:aliceblue;
+  color: aliceblue;
 }
 
 .ul__h2 {
@@ -177,16 +220,16 @@
   width: 100%;
   height: 35%;
   border-radius: 15%;
-  color:white;
+  color: white;
 }
 
-#section_detail{
+#section_detail {
   padding-bottom: 10vh;
 }
 
-#titulo_relacionados{
+#titulo_relacionados {
   padding-left: 3vw;
-  color:black;
+  color: black;
   font-weight: 800;
 
 }
@@ -410,6 +453,3 @@
     margin: 40px auto;
   }
 }
-
-
-
